# survey

./: .gitignore  README.md  model_down.py  run_multi_node_benchmarks.sh  run_single_node_benchmarks.sh  run_single_node_multi_gpu_benchmarks.sh  run_temp_spec_benchmarks.sh
DistServe/: README.md  main.py  pyproject.toml
DistServe/SwiftTransformer/: CMakeLists.txt
DistServe/SwiftTransformer/build-uv/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake
DistServe/SwiftTransformer/build-uv-autonccl/: CMakeCache.txt
DistServe/SwiftTransformer/build-uv-autonccl-mpi/: CMakeCache.txt
DistServe/SwiftTransformer/build-uv-check/: CMakeCache.txt
DistServe/scripts/: build_swifttransformer_uv.sh
EasySpec/: README.md  main.py  pyproject.toml
EasySpec/EasySpec/: easyspec_env.yml  run.py
EasySpec/EasySpec/EasySpec/: device_map.py  modeling_outputs.py  utils.py
EasySpec/EasySpec/EasySpec/dataset/: config.json  dataset_utils.py  get_data_prompts.py  load_llama3eval.py  load_mgsm.py  load_mmlu.py  load_mt_bench.py  load_specbench.py
EasySpec/EasySpec/EasySpec/generation/: cache_utils.py  generation_mode.py
EasySpec/EasySpec/EasySpec/modeling_utils/: auto.py  base_parallel.py  llama.py
EasySpec/EasySpec/datasets/Llama-3.3-70B-Instruct-evals/: README.md
FlexGen/: Dockerfile  README.md  hosts.example  main.py  pyproject.toml  run_flexgen_benchmark.sh  run_flexgen_dist_benchmark.sh  run_flexgen_dist_setup.sh
FlexGen/FlexLLMGen/: README.md
FlexGen/FlexLLMGen/benchmark/flexllmgen/: README.md  bench_175b_4x1.sh  bench_30b_4x1.sh  bench_6.7b_4x1.sh  bench_dist_multi_node.sh  bench_dist_single_node.sh  bench_llama_dist_multi_node.sh  bench_llama_dist_single_node.sh
FlexGen/FlexLLMGen/flexllmgen/: dist_flex_opt.py  flex_opt.py  opt_config.py  pytorch_backend.py
PowerInfer/: README.md  main.py  pyproject.toml  run_powerinfer_benchmark.sh
PowerInfer/PowerInfer/examples/batched-bench/: batched-bench.cpp
SpecExec/: README.md  main.py  pyproject.toml
SpecExec/specexec/: README.md  requirements.txt  run_exp.py
SpecExec/specexec/offloading/: storage_wrapper.py
SpecExec/specexec/specdec/: spec_base.py
SubSpec/: README.md  main.py  pyproject.toml  run_subspec_benchmark.sh
SubSpec/subspec/: .gitignore  README.md  convert_eagle_weights.ipynb  requirements.txt
SubSpec/subspec/analysis/: bench_topk_sampling.py  depth_prob_alpha.ipynb  seq_detailed_analysis.jsonl  tree_detailed_analysis.jsonl
SubSpec/subspec/configs/exp_offloading/: classic_sd_1b_llama_8b.yaml  classic_sd_1p5b_qwen_14b.yaml  classic_sd_1p5b_qwen_32b.yaml  classic_sd_1p5b_qwen_7b.yaml  classic_sd_7b_qwen_32b.yaml  eagle_sd_llama_8b.yaml  eagle_sd_qwen_7b.yaml  subspec_sd_llama_13b_vram_10gb.yaml  subspec_sd_llama_13b_vram_12gb.yaml  subspec_sd_llama_13b_vram_16gb.yaml  subspec_sd_llama_30b_vram_10gb.yaml  subspec_sd_llama_30b_vram_12gb.yaml  subspec_sd_llama_30b_vram_16gb.yaml  subspec_sd_llama_7b.yaml  subspec_sd_llama_7b_vram_10gb.yaml  subspec_sd_llama_7b_vram_12gb.yaml  subspec_sd_llama_7b_vram_16gb.yaml  subspec_sd_llama_8b.yaml  subspec_sd_qwen_14b.yaml  subspec_sd_qwen_32b.yaml  subspec_sd_qwen_7b.yaml  vanilla_llama_8b.yaml  vanilla_qwen_14b.yaml  vanilla_qwen_32b.yaml  vanilla_qwen_7b.yaml
SubSpec/subspec/configs/exp_v2/: subspec_sd.yaml  subspec_sd_fi.yaml  vanilla.yaml
SubSpec/subspec/configs/methods/: classic_sd.yaml  classic_sd_lossy.yaml  eagle_sd.yaml  huggingface.yaml  subspec_sd.yaml  subspec_sd_fi.yaml  subspec_sd_gemlite_fp8.yaml  subspec_sd_gemlite_int8.yaml  subspec_sd_gemlite_mxfp4.yaml  subspec_sd_gemlite_nvfp4.yaml  subspec_sd_lossy.yaml  (+6 more)
SubSpec/subspec/run/: main.py
SubSpec/subspec/tests/: test_all_pipelines.py  test_lossy_tree_verify.py  test_openai_api.py  test_openai_api_real_model.py
ZeRO-Inference/: Dockerfile  README.md  pyproject.toml  run_inference_benchmark.sh
(+233 files in other folders)
