[project]
name = "distserve-env"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
    "torch==2.2.2",
    "aiohttp==3.9.5",
    "aiohttp-cors==0.7.0",
    "fastapi==0.110.1",
    "grpcio==1.62.1",
    "huggingface-hub==0.22.2",
    "msgpack==1.0.8",
    "numpy==1.26.4",
    "opencensus==0.11.4",
    "pandas==2.2.2",
    "prometheus-client==0.20.0",
    "protobuf==4.25.3",
    "py-spy==0.3.14",
    "pydantic==2.7.0",
    "pyyaml==6.0.1",
    "ray==2.10.0",
    "regex==2024.4.16",
    "requests==2.31.0",
    "safetensors==0.4.3",
    "tokenizers==0.15.2",
    "transformers==4.39.3",
    "uvicorn==0.29.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
