[project]
name = "flexgen-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flexllmgen",
    "ray>=2.55.1",
]

[tool.uv.workspace]
members = [
    "FlexLLMGen",
]

[tool.uv.sources]
flexllmgen = { workspace = true, editable = true }
