[project]
name = "powerinfer-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gguf",
    "numpy>=1.24.4",
    "powerinfer",
    "sentencepiece>=0.1.98",
    "transformers>=4.33.2",
]

[tool.uv.sources]
gguf = { path = "PowerInfer/gguf-py" }
powerinfer = { workspace = true }

[tool.uv.workspace]
members = [
    "PowerInfer/powerinfer-py",
]
