[project]
name = "zero-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "deepspeed>=0.10.1",
    "packaging>=26.2",
    "torch>=2.11.0",
    "transformers",
]

[tool.uv.sources]
transformers = { git = "https://github.com/tjruwase/transformers", rev = "kvcache-offload-cpu" }
